k8s/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        # [확인] 본인 Docker Hub ID가 맞는지 확인하세요
        image: heksis/oss-django:latest
        command: ["/bin/sh", "-c"]
        args: ["python manage.py migrate && python manage.py collectstatic --noinput && gunicorn config.wsgi:application --bind 0.0.0.0:8000"]

        # [추가된 부분] Django 리소스 제한 설정
        resources:
          requests:
            memory: "256Mi" # 최소 확보 메모리
            cpu: "100m"     # 최소 확보 CPU
          limits:
            memory: "512Mi" # 최대 사용 메모리 (이거 넘으면 재부팅됨)
            cpu: "500m"     # 최대 사용 CPU

        # 1. 일반 설정 로드
        volumeMounts:
        - mountPath: /app/staticfiles
          name: static-volume
      volumes:
      - name: static-volume
        persistentVolumeClaim:
          claimName: static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
